# g9auto

./: .gitignore  README.md  check.py  compare_interp.py  config.json  functions.py  g9auto.py  loader.py  logger.py  pyproject.toml  qazgrf24.csv  run_proc.py  site.yaml  todo.md  utils.py
example/: README.md  site_akto.yaml  sites_akto_batch.csv
example/akto/: 1303_akto.fg5  1303_akto.project.txt  1303_akto.set.txt  1303_akto0.project.txt  1303_akto0.set.txt  1303_akto001.gsf  1303_akto002.gsf  1303_akto003.gsf  1303_akto004.gsf  1303_akto005.gsf  1303_akto006.gsf  1303_akto007.gsf  1303_akto008.gsf  1303_akto009.gsf  1303_akto010.gsf  1303_akto011.gsf  1303_akto012.gsf  1303_aktovgg.project.txt  1303_aktovgg.set.txt  ETCPOT.UFT  etgtab.out  etgtab.prn
example/akto/ProjectGraphs/: 1303_akto0001.bgd  1303_akto0002.bgd  1303_akto0003.bgd  1303_akto0004.bgd  1303_akto0005.bgd  1303_akto0006.bgd  1303_akto0007.bgd  1303_akto0008.bgd  1303_akto0009.bgd  1303_akto001.bgd  1303_akto0010.bgd  1303_akto0011.bgd  1303_akto0012.bgd  1303_akto002.bgd  1303_akto003.bgd  1303_akto004.bgd  1303_akto005.bgd  1303_akto006.bgd  1303_akto007.bgd  1303_akto008.bgd  1303_akto009.bgd  1303_akto010.bgd  1303_akto011.bgd  (+25 more)
g9auto/: __init__.py  calibration.py  cli.py  core.py  gradient.py  loader.py  logger.py  params.py  site.py
g9auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
g9auto/data/: config.yaml  site_template.yaml
output/: expanded_data.json  expanded_params.csv  expanded_params.json
reference/: 1303_akto.project.txt  1303_akto.set.txt
